Добавил авторизацию и регистрацию

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,14 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.initialize=true
 spring.jpa.show-sql=true
+
+############## App Properties #############################
+app.jwtSecret= JWTSuperSecretKey
+
+############## Mail Properties ################################
+sping.mail.host=smtp.mailtrap.io
+sping.mail.port=2525
+sping.mail.protocol=smtp
+sping.mail.user=2bf476315f5e79
+sping.mail.password=68048bda733595
+spring.mail.properties.mail.smtp.from=e6abaac452-d39579@inbox.mailtrap.io
