--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 ############## Database Properties #############################
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/spring_cargo
+spring.datasource.url=jdbc:mysql://localhost:3306/spring_cargo?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC&useLegacyDatetimeCode=false&characterEncoding=utf8
 spring.datasource.username=root
 spring.datasource.password=1234
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
