Добавил создание объявления, загрузка и выгрузка фотографий

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -17,9 +17,12 @@ spring.servlet.multipart.max-request-size=100MB
 storage.location=./uploads
 
 ############## Mail Properties ################################
-sping.mail.host=smtp.mailtrap.io
-sping.mail.port=2525
-sping.mail.protocol=smtp
-sping.mail.user=2bf476315f5e79
-sping.mail.password=68048bda733595
-spring.mail.properties.mail.smtp.from=e6abaac452-d39579@inbox.mailtrap.io
+mail.host=smtp.mailtrap.io
+mail.port=25
+mail.protocol=smtp
+mail.user=5f7a73bc7a0ef3
+mail.password=fdcfe9bf1cd2a9
+mail.from=bot@example.com
+mail.auth=true
+mail.starttls=true
+mail.debug=true
