--- a/cargo_server/pom.xml
+++ b/cargo_server/pom.xml
@@ -70,6 +70,10 @@
       <artifactId>commons-io</artifactId>
       <version>2.6</version>
     </dependency>
+		<dependency>
+			<groupId>org.liquibase</groupId>
+			<artifactId>liquibase-core</artifactId>
+		</dependency>
   </dependencies>
 
 </project>
