--- a/cargo_server/src/main/resources/application.properties
+++ b/cargo_server/src/main/resources/application.properties
@@ -4,9 +4,8 @@ spring.datasource.url=jdbc:mysql://localhost:3306/spring_cargo?useSSL=false&allo
 spring.datasource.username=root
 spring.datasource.password=1234
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.initialize=true
-spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=false
 
 ############## App Properties #############################
 app.jwtSecret= JWTSuperSecretKey
