--- a/cargo_server/src/main/resources/application-dev.properties
+++ b/cargo_server/src/main/resources/application-dev.properties
@@ -4,8 +4,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/spring_cargo?useSSL=false&allo
 spring.datasource.username=root
 spring.datasource.password=1234
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.initialize=true
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 
 ############## App Properties #############################
