--- a/cargo_server/pom.xml
+++ b/cargo_server/pom.xml
@@ -73,7 +73,9 @@
 		<dependency>
 			<groupId>org.liquibase</groupId>
 			<artifactId>liquibase-core</artifactId>
+			<version>4.3.2</version>
 		</dependency>
+
   </dependencies>
 
 </project>
