--- a/cargo_server/pom.xml
+++ b/cargo_server/pom.xml
@@ -75,6 +75,11 @@
 			<artifactId>liquibase-core</artifactId>
 			<version>4.3.2</version>
 		</dependency>
+		<dependency>
+			<groupId>net.kaczmarzyk</groupId>
+			<artifactId>specification-arg-resolver</artifactId>
+			<version>2.6.2</version>
+		</dependency>
 
   </dependencies>
 
