--- a/cargo_server/src/main/resources/application.properties
+++ b/cargo_server/src/main/resources/application.properties
@@ -16,9 +16,12 @@ spring.servlet.multipart.max-request-size=100MB
 storage.location=./uploads
 
 ############## Mail Properties ################################
-sping.mail.host=smtp.mailtrap.io
-sping.mail.port=2525
-sping.mail.protocol=smtp
-sping.mail.user=2bf476315f5e79
-sping.mail.password=68048bda733595
-spring.mail.properties.mail.smtp.from=e6abaac452-d39579@inbox.mailtrap.io
+mail.host=smtp.gmail.com
+mail.port=587
+mail.protocol=smtp
+mail.user=cargobobcompany
+mail.password=cargo1234
+mail.from=cargo@gmail.com
+mail.auth=true  
+mail.starttls=true
+mail.debug=false
