--- a/cargo_server/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/cargo_server/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -1,6 +1,6 @@
 databaseChangeLog:
 - changeSet:
-    id: 1618837876616-1
+    id: 1619424144392-1
     author: dbelo (generated)
     changes:
     - createTable:
@@ -37,7 +37,7 @@ databaseChangeLog:
             type: BIGINT
         tableName: feedback
 - changeSet:
-    id: 1618837876616-2
+    id: 1619424144392-2
     author: dbelo (generated)
     changes:
     - createTable:
@@ -68,10 +68,8 @@ databaseChangeLog:
             name: description
             type: VARCHAR(255)
         - column:
-            constraints:
-              nullable: false
             name: price
-            type: INT
+            type: DOUBLE
         - column:
             name: status
             type: VARCHAR(50)
@@ -89,7 +87,7 @@ databaseChangeLog:
             type: BIGINT
         tableName: orders
 - changeSet:
-    id: 1618837876616-3
+    id: 1619424144392-3
     author: dbelo (generated)
     changes:
     - createTable:
@@ -109,7 +107,7 @@ databaseChangeLog:
             type: BIGINT
         tableName: photo
 - changeSet:
-    id: 1618837876616-4
+    id: 1619424144392-4
     author: dbelo (generated)
     changes:
     - createTable:
@@ -132,7 +130,7 @@ databaseChangeLog:
             type: BIGINT
         tableName: recipient_message
 - changeSet:
-    id: 1618837876616-5
+    id: 1619424144392-5
     author: dbelo (generated)
     changes:
     - createTable:
@@ -149,7 +147,7 @@ databaseChangeLog:
             type: VARCHAR(255)
         tableName: role
 - changeSet:
-    id: 1618837876616-6
+    id: 1619424144392-6
     author: dbelo (generated)
     changes:
     - createTable:
@@ -165,25 +163,25 @@ databaseChangeLog:
             constraints:
               nullable: false
             name: height
-            type: INT
+            type: DOUBLE
         - column:
             constraints:
               nullable: false
             name: length
-            type: INT
+            type: DOUBLE
         - column:
             constraints:
               nullable: false
             name: weight
-            type: INT
+            type: DOUBLE
         - column:
             constraints:
               nullable: false
             name: width
-            type: INT
+            type: DOUBLE
         tableName: size
 - changeSet:
-    id: 1618837876616-7
+    id: 1619424144392-7
     author: dbelo (generated)
     changes:
     - createTable:
@@ -203,7 +201,7 @@ databaseChangeLog:
             type: BIGINT
         tableName: token
 - changeSet:
-    id: 1618837876616-8
+    id: 1619424144392-8
     author: dbelo (generated)
     changes:
     - createTable:
@@ -250,7 +248,7 @@ databaseChangeLog:
             type: BIGINT
         tableName: user
 - changeSet:
-    id: 1618837876616-9
+    id: 1619424144392-9
     author: dbelo (generated)
     changes:
     - loadData:
@@ -270,7 +268,7 @@ databaseChangeLog:
         separator: ','
         tableName: role
 - changeSet:
-    id: 1618837876616-10
+    id: 1619424144392-10
     author: dbelo (generated)
     changes:
     - loadData:
@@ -322,7 +320,7 @@ databaseChangeLog:
         separator: ','
         tableName: user
 - changeSet:
-    id: 1618837876616-11
+    id: 1619424144392-11
     author: dbelo (generated)
     changes:
     - createIndex:
@@ -332,7 +330,7 @@ databaseChangeLog:
         indexName: FK6qic6vg8mrs7gi4kip3e1gt07
         tableName: orders
 - changeSet:
-    id: 1618837876616-12
+    id: 1619424144392-12
     author: dbelo (generated)
     changes:
     - createIndex:
@@ -342,7 +340,7 @@ databaseChangeLog:
         indexName: FK79keudebybjlldk2o4i0nwqev
         tableName: token
 - changeSet:
-    id: 1618837876616-13
+    id: 1619424144392-13
     author: dbelo (generated)
     changes:
     - createIndex:
@@ -352,7 +350,7 @@ databaseChangeLog:
         indexName: FK7k33yw505d347mw3avr93akao
         tableName: feedback
 - changeSet:
-    id: 1618837876616-14
+    id: 1619424144392-14
     author: dbelo (generated)
     changes:
     - createIndex:
@@ -362,7 +360,7 @@ databaseChangeLog:
         indexName: FK7p0hp3hqvwt7gx0aeee2bq6ck
         tableName: recipient_message
 - changeSet:
-    id: 1618837876616-15
+    id: 1619424144392-15
     author: dbelo (generated)
     changes:
     - createIndex:
@@ -372,7 +370,7 @@ databaseChangeLog:
         indexName: FKaoi7ws9m87lj0rn07xe2dnkb7
         tableName: recipient_message
 - changeSet:
-    id: 1618837876616-16
+    id: 1619424144392-16
     author: dbelo (generated)
     changes:
     - createIndex:
@@ -382,7 +380,7 @@ databaseChangeLog:
         indexName: FKel9kyl84ego2otj2accfd8mr7
         tableName: orders
 - changeSet:
-    id: 1618837876616-17
+    id: 1619424144392-17
     author: dbelo (generated)
     changes:
     - createIndex:
@@ -392,7 +390,7 @@ databaseChangeLog:
         indexName: FKfeel4c7se3rsqqxiug6m1983x
         tableName: photo
 - changeSet:
-    id: 1618837876616-18
+    id: 1619424144392-18
     author: dbelo (generated)
     changes:
     - createIndex:
@@ -402,7 +400,7 @@ databaseChangeLog:
         indexName: FKh9yd1vioioq3c30r5auxilkrk
         tableName: recipient_message
 - changeSet:
-    id: 1618837876616-19
+    id: 1619424144392-19
     author: dbelo (generated)
     changes:
     - createIndex:
