--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
         <configuration>
+          <addResources>true</addResources>
           <excludes>
             <exclude>
               <groupId>org.projectlombok</groupId>
@@ -35,6 +36,11 @@
             </exclude>
           </excludes>
         </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.22.0</version>
       </plugin>
     </plugins>
   </build>
