--- a/cargo_chat/pom.xml
+++ b/cargo_chat/pom.xml
@@ -51,6 +51,11 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-data-jpa</artifactId>
     </dependency>
+    <dependency>
+      <groupId>com.tusur.cargo</groupId>
+      <artifactId>cargo_server</artifactId>
+      <version>1.0.0</version>
+    </dependency>
   </dependencies>
 
 </project>
