--- a/cargo_server/src/main/resources/application-dev.properties
+++ b/cargo_server/src/main/resources/application-dev.properties
@@ -12,8 +12,8 @@ app.jwtSecret=JWTSuperSecretKey
 server.port=8080
 
 ############## Files Properties #############################
-spring.servlet.multipart.max-file-size=200MB
-spring.servlet.multipart.max-request-size=100MB
+#spring.servlet.multipart.max-file-orderSize=200MB
+#spring.servlet.multipart.max-request-orderSize=200MB
 storage.location=./uploads
 
 ############## Mail Properties ################################
@@ -26,3 +26,8 @@ mail.from=bot@example.com
 mail.auth=true
 mail.starttls=true
 mail.debug=true
+
+############## Swagger Properties ################################
+springfox.documentation.swagger-ui.base-url=/docs
+server.servlet.context-path=/api
+springfox.documentation.swagger.v2.use-model-v3=false
