--- a/cargo_server/src/main/resources/application.properties
+++ b/cargo_server/src/main/resources/application.properties
@@ -11,8 +11,8 @@ spring.jpa.show-sql=false
 app.jwtSecret= JWTSuperSecretKey
 
 ############## Files Properties #############################
-spring.servlet.multipart.max-file-size=200MB
-spring.servlet.multipart.max-request-size=100MB
+#spring.servlet.multipart.max-file-orderSize=200MB
+#spring.servlet.multipart.max-request-orderSize=100MB
 storage.location=./uploads
 
 ############## Mail Properties ################################
@@ -25,3 +25,8 @@ mail.from=cargo@gmail.com
 mail.auth=true  
 mail.starttls=true
 mail.debug=false
+
+############## Swagger Properties ################################
+springfox.documentation.swagger-ui.base-url=/docs
+server.servlet.context-path=/api
+springfox.documentation.swagger.v2.use-model-v3=false
